--- a/Project.toml
+++ b/Project.toml
@@ -3,5 +3,10 @@ uuid = "1214b007-556e-4c4e-8d39-042f176f8b35"
 authors = ["Andrew Gibbs"]
 version = "1.0.0-DEV"
 
+[deps]
+BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+
 [compat]
 julia = "1.7"
