--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ version = "1.0.0-DEV"
 [deps]
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+ProfileView = "c46f51b8-102a-5cf2-8d2c-8597cb0e0da7"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
