--- a/Project.toml
+++ b/Project.toml
@@ -14,3 +14,9 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
 julia = "1.7"
+Documenter = "1.7"
+DocumenterCitations = "1.3"
+Plots = "1.40"
+Roots = "2.1"
+SpecialFunctions = "2.3"
+StaticArrays = "1.9"
