--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Andrew Gibbs"]
 version = "0.0.2"
 
 [deps]
+Clipper = "c8f6d549-b3ab-5508-a0d1-48fe138e8cc1"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
@@ -11,8 +12,8 @@ SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
-julia = "1.7"
 Plots = "1.40"
 Roots = "2.2"
 SpecialFunctions = "2.4"
 StaticArrays = "1.9"
+julia = "1.7"
